[gd_scene load_steps=7 format=3 uid="uid://rw7tvjhgildq"]

[ext_resource type="Script" path="res://lightning.gd" id="1_f2dc0"]
[ext_resource type="Texture2D" uid="uid://ran0b2r5nbii" path="res://Artwork/Effects/lightning-Sheet.png" id="1_fmx26"]

[sub_resource type="Animation" id="Animation_o8pa0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_gky5h"]
resource_name = "idle"
length = 3.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xy4i"]
_data = {
"RESET": SubResource("Animation_o8pa0"),
"idle": SubResource("Animation_gky5h")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pllcq"]
radius = 54.0
height = 184.0

[node name="Lightning" type="CharacterBody2D"]
script = ExtResource("1_f2dc0")

[node name="LightSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_fmx26")
hframes = 14
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_7xy4i")
}

[node name="LightningHitbox" type="Area2D" parent="."]
position = Vector2(0, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightningHitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pllcq")

[node name="ShockTimer" type="Timer" parent="."]
wait_time = 1.4

[connection signal="area_entered" from="LightningHitbox" to="." method="_on_lightning_area_entered"]
[connection signal="timeout" from="ShockTimer" to="." method="_on_shock_timer_timeout"]
